wrap fix

--- a/src/App.css
+++ b/src/App.css
@@ -96,15 +96,14 @@ button, link {
 
 .multi-column {
   -moz-column-count: 2;
-  -moz-column-gap: 40px;
+  -moz-column-gap: 35px;
   -moz-column-fill: auto;
   -webkit-column-count: 2;
-  -webkit-column-gap: 40px;
+  -webkit-column-gap: 35px;
   -webkit-column-fill: auto;
   column-count: 2;
-  column-gap: 40px;
+  column-gap: 35px;
   column-fill: balance;
-  word-wrap: normal;
 }
 
 .multi-column li{
